Added instructions for modify alluxio-site.properties